# robot_controller2_ackm

./: CMakeLists.txt  README.md  package.xml  robot_controller2_ackm.xml
bringup/config/: carlikebot_controllers.yaml  efk.yaml  ps3.config.yaml
bringup/launch/: carlikebot.launch.py  teleop.launch.py
data_analysis/: Motor control analysis.ipynb
description/launch/: view_robot.launch.py
description/ros2_control/: carlikebot.ros2_control.xacro
description/urdf/: carlikebot.urdf.xacro  tt02.xacro
hardware/: a.out  ada_servo_driver.cpp  carlikebot_system.cpp  drive.txt  drive_motor.cpp  motor.cpp  motor_pid.cpp  pencoder.txt  photo_encoder.cpp  steer_motor.cpp  test.cpp  test_drive  test_drive.cpp  test_drive2  test_drive2.cpp  test_drive3.cpp  test_drive4  test_drive4.cpp  test_drive~  test_photoencoder  test_photoencoder.cpp  test_photoencoder2.cpp  test_steer  test_steer.cpp  test_steer2.cpp
hardware/include/: lgpio.h
hardware/include/robot_controller2_ackm/: ada_servo_driver.hpp  carlikebot_system.hpp  drive_motor.hpp  motor.hpp  motor_pid.hpp  photo_encoder.hpp  steer_motor.hpp
test/: test_carlikebot_launch.py  test_carlikebot_launch_remapped.py  test_urdf_xacro.py  test_view_robot_launch.py
test/modules/: ada_servo_driver.cpp  lgpio.c  test_motor.cpp  test_motor_pid.cpp  test_photo_encoder.cpp
